--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tippyjs/react": "^4.2.6",
     "framer-motion": "^6.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
     "react-tsparticles": "^2.1.3",
+    "tippy.js": "^6.3.7",
     "tsparticles": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
