--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
     "react-tsparticles": "^2.1.3",
+    "react-world-flags": "^1.5.0",
     "tippy.js": "^6.3.7",
     "tsparticles": "^2.1.3",
     "web-vitals": "^2.1.4"
