add fullpage scroll, not fully implemented yet - still deciding to use it or not

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@ap.cx/react-fullpage": "^0.2.0",
 		"@emailjs/browser": "^3.6.2",
 		"@sanity/client": "^3.3.2",
 		"@sanity/image-url": "^1.0.1",
